fix ipad background stretch

--- a/angular-portfolio/src/app/home/home.component.scss
+++ b/angular-portfolio/src/app/home/home.component.scss
@@ -1,7 +1,7 @@
 .container-fluid {
   min-height: 100vh;
   background-image: url("../../assets/images/Starbasesnow.png");
-  background-size: cover;
+  background-size: 100vh;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
